# drf-api-auth

./: .gitignore  API_DOCS.md  README.md  pyproject.toml
api/api/: celery.py  settings.py  urls.py
api/securegate/: admin.py  apps.py  bot_handlers.py  forms.py  models.py  tasks.py  telegrambot.py  urls.py  views.py
api/securegate/management/commands/: runbot.py
api/securegate/migrations/: 0001_initial.py  0002_delete_examplemodel.py  0003_initial.py  0004_alter_telegramuser_options_remove_telegramuser_phone_and_more.py  0005_alter_telegramuser_username.py
api/securegate/templates/securegate/: home.html  login.html  register.html
api/teleapi/: apps.py  serializers.py  urls.py  views.py
api/templates/: base.html
